--- a/src/data/projects.json
+++ b/src/data/projects.json
@@ -3,28 +3,28 @@
     "src": "/projects/bmw_indoor_red.webp",
     "alt": "BMW indoor red",
     "title": "Zmiana podświetlenia w serii „F”",
-    "description": "Cena za zmianę całego podświetlenia w seriach \"F\" wynosi od 800 do 1000 zł, w zależności od specyfikacji. Jeśli zdecydujesz się skorzystać z kilku naszych usług, oferujemy zniżki lub rabaty."
+    "description": "Cena za zmianę całego podświetlenia w seriach \"F\" wynosi od 800 do 1000 zł, w zależności od wyposażenia samochodu. Jeśli zdecydujesz się skorzystać z kilku naszych usług, oferujemy zniżki lub rabaty."
   },
   {
-    "src": "/projects/blue_cockpit.webp",
+    "src": "/projects/f_series_cockpit.webp",
     "alt": "BMW Blue Cockpit",
     "title": "Zmiana podświetlenia licznika w serii „F”",
-    "description": "Cena za zmianę podświetlenia licznika w seriach \"F\" wynosi 250 zł. Dodatkowo, jeśli życzysz sobie czerwone wskazówki, koszt wzrośnie o 100 zł."
+    "description": "Cena za zmianę podświetlenia licznika w seriach \"F\" wynosi 250 zł. Dodatkowo, jeśli życzysz sobie czerwone lub niebieskie wskazówki, koszt wzrośnie o 100 zł."
   },
   {
-    "src": "/projects/black_bmw.webp",
+    "src": "/banner/detailing.webp",
     "alt": "BMW Black",
     "title": "Detailing wnętrza",
-    "description": "Detailing wnętrza to kompleksowy proces czyszczenia i renowacji wnętrza samochodu, mający na celu przywrócenie mu stanu zbliżonego do nowego. Korzystamy z wysokiej jakości środków do pielęgnacji, aby zadbać o Twój pojazd. Cena za usługę wynosi od 300 do 400 zł, w zależności od stopnia zabrudzenia. Jeśli zdecydujesz się skorzystać z kilku naszych usług, możemy zaoferować zniżkę lub rabat."
+    "description": "Detailing wnętrza to kompleksowy proces czyszczenia i renowacji wnętrza samochodu, mający na celu przywrócenie mu stanu zbliżonego do nowego. Korzystamy z wysokiej jakości środków do pielęgnacji, aby zadbać o Twój pojazd. Cena za usługę wynosi od 200 do 400 zł, w zależności od stopnia zabrudzenia. Jeśli zdecydujesz się skorzystać z kilku naszych usług, możemy zaoferować zniżkę lub rabat."
   },
   {
     "src": "/projects/bmw_blue_second.webp",
     "alt": "BMW Blue",
     "title": "Odkurzanie, czyszczenie, pranie wnętrza",
-    "description": "Dokładne odkurzanie i pranie wnętrza odświeży Twój samochód i zapewni mu przyjemny zapach. Cena usługi zależy od stopnia zabrudzenia i obejmuje odkurzanie, pranie oraz czyszczenie, w przedziale od 400 do 600 zł. Na przykład, pranie jednego fotela kosztuje 80 zł. Jeśli zdecydujesz się skorzystać z kilku naszych usług, zaoferujemy zniżkę lub rabat."
+    "description": "Dokładne odkurzanie i pranie wnętrza odświeży Twój samochód i zapewni mu przyjemny zapach. Cena usługi zależy od stopnia zabrudzenia i obejmuje odkurzanie, pranie oraz czyszczenie, w przedziale od 300 do 400 zł. Jeśli zdecydujesz się skorzystać z kilku naszych usług, zaoferujemy zniżkę lub rabat."
   },
   {
-    "src": "/projects/cockpit_bmw_e90.webp",
+    "src": "/projects/series_e_cockpit.webp",
     "alt": "BMW E90 Cockpit",
     "title": "Zmiana podświetlenia w serii „E”",
     "description": "Cena za zmianę całego podświetlenia w seriach \"E\" wynosi od 600 do 850 zł, w zależności od posiadanego wyposażenia. W przypadku skorzystania z kilku naszych usług oferujemy zniżki lub rabaty."
