--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^5.2.1",
+    "react-use": "^17.5.0",
     "react-use-measure": "^2.1.1",
     "sharp": "^0.33.3"
   },
